manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joebarbere
  labels:
    name: joebarbere
