manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-dockerized-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-dockerized
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
